# svgcard

./: Cargo.toml  Dockerfile  LICENSE.md  README.md
.github/: dependabot.yml
.github/workflows/: build.yml  docker.yml
example/calendar/: README.md  create_tmpl.py  create_val.py
scripts/: cpbin.py
src/: import.rs  main.rs  style.rs  template.rs  text.rs
