[package]
name = "svgcard"
version = "0.1.0"
authors = ["yasuyuky <yasuyuki.ymd@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xml-rs = "1.0.0"
toml = "0.9.7"
serde = { version = "1.0.225", features = ["derive"] }
anyhow = "1.0.99"
regex = "1.11.2"
clap = { version = "4.5.48", features = ["derive"] }
