[package]
name = "svgcard"
version = "0.1.0"
authors = ["yasuyuky <yasuyuki.ymd@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xml-rs = "1.0.0"
toml = "0.9.11"
serde = { version = "1.0.228", features = ["derive"] }
anyhow = "1.0.100"
regex = "1.12.3"
clap = { version = "4.5.57", features = ["derive"] }
